force-app/main/default/objects/ADM_Case__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <externalId>true</externalId>
    <label>Account ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>