force-app/main/default/objects/ADM_Case__c/fields/Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Account_Link__c</fullName>
    <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; Account_Id__c , Account_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>