force-app/main/default/objects/ADM_Case__c/fields/Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage__c</fullName>
    <label>Red Account Stage</label>
    <length>10</length>
    <type>Text</type>
</CustomField>