force-app/main/default/objects/ADM_Case__c/fields/Account_Support_SBR_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Support_SBR_Category__c</fullName>
    <label>Account Support SBR Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>