force-app/main/default/objects/ADM_Case__c/fields/Case_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_Date__c</fullName>
    <label>Case Created</label>
    <type>DateTime</type>
</CustomField>