force-app/main/default/objects/ADM_Case__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <externalId>true</externalId>
    <label>Case ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>