force-app/main/default/objects/ADM_Case__c/fields/Case_ID_Set__c.field-meta.xml
<CustomField>
    <fullName>Case_ID_Set__c</fullName>
    <label>Case ID Set</label>
    <type>DateTime</type>
</CustomField>