force-app/main/default/objects/ADM_Case__c/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <label>Case Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>