force-app/main/default/objects/ADM_Case__c/fields/Case_Owner_Link__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Link__c</fullName>
    <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; Case_Owner_ID__c , Case_Owner__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>