force-app/main/default/objects/ADM_Case__c/fields/Case_Subject_Link__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject_Link__c</fullName>
    <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; Case_ID__c , Case_Subject__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject</label>
    <type>Text</type>
</CustomField>