force-app/main/default/objects/ADM_Case__c/fields/Cases_Link__c.field-meta.xml
<CustomField>
    <fullName>Cases_Link__c</fullName>
    <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp;  Case_ID__c , Case_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cases Link</label>
    <type>Text</type>
</CustomField>