force-app/main/default/objects/ADM_Case__c/fields/Escalated_Status__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Status__c</fullName>
    <label>Escalated Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>