force-app/main/default/objects/ADM_Case__c/fields/FunctionalArea__c.field-meta.xml
<CustomField>
    <fullName>FunctionalArea__c</fullName>
    <label>Functional Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>