force-app/main/default/objects/ADM_Case__c/fields/General_Application_Area__c.field-meta.xml
<CustomField>
    <fullName>General_Application_Area__c</fullName>
    <label>General Application Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>