force-app/main/default/objects/ADM_Case__c/fields/New_Feature_Release_Related__c.field-meta.xml
<CustomField>
    <fullName>New_Feature_Release_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Feature or Release Related</label>
    <type>Checkbox</type>
</CustomField>