force-app/main/default/objects/ADM_Case__c/fields/Parent_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Id__c</fullName>
    <label>Parent Account ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>