force-app/main/default/objects/ADM_Case__c/fields/Parent_Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Link__c</fullName>
    <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; Parent_Account_Id__c , Parent_Account_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account</label>
    <type>Text</type>
</CustomField>