force-app/main/default/objects/ADM_Case__c/fields/Parent_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Name__c</fullName>
    <label>Parent Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>