force-app/main/default/objects/ADM_Case__c/fields/Support_Skill_Group__c.field-meta.xml
<CustomField>
    <fullName>Support_Skill_Group__c</fullName>
    <label>Support_Skill_Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>