force-app/main/default/objects/ADM_Case__c/fields/Support_Tier_3_Owner__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier_3_Owner__c</fullName>
    <label>Support Tier 3 Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>