force-app/main/default/objects/ADM_Case__c/fields/Support_Tier_3_Owner_Link__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier_3_Owner_Link__c</fullName>
    <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; Support_Tier_3_Owner__c , Support_Tier_3_Owner_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Tier 3 Owner</label>
    <type>Text</type>
</CustomField>