force-app/main/default/objects/ADM_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Case_Number__c</columns>
    <columns>Work__c</columns>
    <columns>NAME</columns>
    <columns>External_ID__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Account_Id__c</columns>
    <columns>Parent_Account_Id__c</columns>
    <columns>Case_Owner_ID__c</columns>
    <columns>Case_Owner_Link__c</columns>
    <columns>Cases_Link__c</columns>
    <columns>Case_Subject_Link__c</columns>
    <columns>Account_Link__c</columns>
    <columns>Parent_Account_Link__c</columns>
    <columns>Case_Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>